-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.6, 5.3.0, 5.4.0
-
None
-
Windows 10 Technical Preview 9888.
Qt 5.3 - 5.4 shared and static builds.
-
Hang/Qt5: 6796f2337ee31b4b4f07eaa54d868b999c39233a (qtbase/5.4, 7.1.2015, 5.4.1), Hang/Qt 4: 18c5ff04103eadcb532d03d526714385943295ab (Qt 4.8, 8.1.2015, 4.8.7), Add Win10 version: b495a27d4e28ed19b00557dbaf8ab5d31c21ae4f ( qtbase/dev, 8.1.2015, 5.5), 502
Qt executables can not start in Windows 10 Technical Preview.
Tested on build 9888.
Process takes 100% of processor time on one logical core.
Maybe it is caused by change of Windows kernel version.
- is required for
-
QTBUG-43201 Issues to be fixed before 5.4.1
-
- Closed
-
- relates to
-
QTBUG-43444 QSysInfo::​kernelVersion() returns wrong result on Windows 8.1 and 10
-
- Closed
-
| For Gerrit Dashboard: QTBUG-43413 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 102355,2 | WIP: Detect Windows 10. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 102440,5 | Introduce Windows version 10. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 102441,7 | Windows: Fix OS version determination for Windows >= 8 | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 103052,2 | Windows: Fix OS version determination for Windows >= 8 | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
| 103120,2 | Introduce Windows version 10. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |