Introduce Windows version 10.

Detect OS kernel version 10.0 as Windows 10.

Task-number: QTBUG-43413
Change-Id: I39307cf8cc2e7cc209d6a88b8576db87086fa20e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>